8306949: Resolve miscellaneous multiple symbol definition issues when statically linking JDK/VM natives with standard launcher